--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -3,7 +3,7 @@ name: Update GitHub Stats
 on:
   schedule:
     - cron: '0 0 * * *'  # Corre todos los días a medianoche UTC
-  workflow_dispatch:    # Permite ejecutarlo manualmente
+  workflow_dispatch:
 
 jobs:
   build:
@@ -11,6 +11,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -25,11 +27,11 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: node get-stats.js
 
-      - name: Commit and push stats.json
+      - name: Commit and push updated stats.html
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add stats.json
-          git commit -m "Update GitHub stats"
-          git push
+          git add stats.html
+          git commit -m "Update GitHub stats page"
+          git push origin main
         continue-on-error: true
