--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -22,15 +22,16 @@ jobs:
 
       - name: Run stats script
         env:
-          GH_TOKEN: ${{ secrets.GH_PAT }}   # Usa tu PAT aquí
+          GH_TOKEN: ${{ secrets.GH_PAT }}
         run: node get-stats.js
 
       - name: Commit and push stats.html
         env:
-          GH_PAT: ${{ secrets.GH_PAT }}     # Usa PAT para autenticación git
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
+          git pull origin main --rebase || true
           git add stats.html
           git commit -m "Update GitHub stats page" || echo "No changes to commit"
           git push https://x-access-token:${GH_PAT}@github.com/${{ github.repository }} HEAD:main
