--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -31,7 +31,6 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git pull origin main --rebase || true
           git add stats.html
           git commit -m "Update GitHub stats page" || echo "No changes to commit"
-          git push https://x-access-token:${GH_PAT}@github.com/${{ github.repository }} HEAD:main
+          git push https://aircunza:${GH_PAT}@github.com/${{ github.repository }} HEAD:main
