--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -3,14 +3,15 @@ name: Update GitHub Stats
 on:
   schedule:
     - cron: '0 0 * * *'  # Corre todos los días a medianoche UTC
-  workflow_dispatch:    # Permite ejecutarlo manualmente
+  workflow_dispatch:      # Permite ejecutarlo manualmente
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -22,15 +23,15 @@ jobs:
 
       - name: Run stats script
         env:
-          GH_TOKEN: ${{ secrets.GH_PAT }}
+          GH_TOKEN: ${{ secrets.GH_PAT }}  # Usa tu PAT aquí como token de autenticación para la API
         run: node get-stats.js
 
       - name: Commit and push stats.html
         env:
-          GH_PAT: ${{ secrets.GH_PAT }}
+          GH_PAT: ${{ secrets.GH_PAT }}    # Usa PAT para autenticación Git
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add stats.html
           git commit -m "Update GitHub stats page" || echo "No changes to commit"
-          git push https://aircunza:${GH_PAT}@github.com/${{ github.repository }} HEAD:main
+          git push https://x-access-token:${GH_PAT}@github.com/${{ github.repository }} HEAD:main
