--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -2,36 +2,36 @@ name: Update GitHub Stats
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Corre todos los días a medianoche UTC
-  workflow_dispatch:    # Permite ejecutarlo manualmente
+    - cron: '0 * * * *'  # cada hora, por ejemplo
+  workflow_dispatch:
 
 jobs:
-  build:
+  update-stats:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: '18'
 
       - name: Install dependencies
         run: npm install octokit
 
-      - name: Run stats script
-        env:
-          GH_TOKEN: ${{ secrets.GH_PAT }}   # Usa tu PAT aquí para obtener stats
+      - name: Generate stats.html
         run: node get-stats.js
-
-      - name: Commit and push stats.html
         env:
-          GH_PAT: ${{ secrets.GH_PAT }}     # Usa PAT para autenticación git
+          GH_PAT_READ: ${{ secrets.GH_PAT_READ }}
+
+      - name: Commit & push changes
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add stats.html
           git commit -m "Update GitHub stats page" || echo "No changes to commit"
-          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}
+          git remote set-url origin https://x-access-token:${GH_PAT_WRITE}@github.com/aircunza/github-readme-stats.git
           git push origin HEAD:main
+        env:
+          GH_PAT_WRITE: ${{ secrets.GH_PAT_WRITE }}
