--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,30 +1,24 @@
-name: Test GitHub Token Permissions
+name: Test Push
 
-on:
-  workflow_dispatch:
+on: [push]
 
 jobs:
-  test-token:
+  test-push:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
         with:
-          node-version: '18'
+          token: ${{ secrets.GH_TOKEN }}
 
-      - name: Install dependencies
-        run: npm install octokit
+      - name: Create test file
+        run: echo "Test $(date)" > test.txt
 
-      - name: Run get-stats.js (show stats output)
-        run: node get-stats.js
+      - name: Commit and push
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-
-      - name: Run push-test.js (test push permission)
-        run: node push-test.js
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add test.txt
+          git commit -m "Test push from workflow" || echo "No changes to commit"
+          git push https://x-access-token:${GH_TOKEN}@github.com/aircunza/github-readme-stats.git HEAD:main
