--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,9 +1,13 @@
 name: Test Push
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   test-push:
+    if: github.actor != 'github-actions[bot]'  # Evita loops
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
