--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,13 +1,10 @@
-name: Test Push x
+name: Test Push
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   test-push:
-    if: github.actor != 'github-actions[bot]'  # Evita loops
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
