--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,25 +1,33 @@
-name: Test Push
+name: Test GH_TOKEN
 
 on:
   workflow_dispatch:
 
 jobs:
-  test-push:
+  test-token:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GH_TOKEN }}
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      - name: Create test file
-        run: echo "Test $(date)" > test.txt
+      - name: Check GH_TOKEN length
+        run: echo "GH_TOKEN length is ${#GH_TOKEN}"
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
-      - name: Commit and push
+      - name: Test GH_TOKEN with GitHub API
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          curl -H "Authorization: token $GH_TOKEN" https://api.github.com/user
+
+      - name: Commit and push changes
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
+          echo "Update $(date)" > test.txt
           git add test.txt
-          git commit -m "Test push from workflow" || echo "No changes to commit"
+          git commit -m "Update test file from workflow" || echo "No changes to commit"
           git push https://x-access-token:${GH_TOKEN}@github.com/aircunza/github-readme-stats.git HEAD:main
