--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,33 +1,36 @@
-name: Test GH_TOKEN
+name: Test Push with PAT
 
 on:
   workflow_dispatch:
 
 jobs:
-  test-token:
+  test-push:
     runs-on: ubuntu-latest
+    env:
+      GH_TOKEN: ${{ secrets.GH_TOKEN }}
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Check GH_TOKEN length
+      - name: Show GH_TOKEN length
         run: echo "GH_TOKEN length is ${#GH_TOKEN}"
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
-      - name: Test GH_TOKEN with GitHub API
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: |
-          curl -H "Authorization: token $GH_TOKEN" https://api.github.com/user
+      - name: Test GitHub API with PAT
+        run: curl -H "Authorization: token $GH_TOKEN" https://api.github.com/user
 
-      - name: Commit and push changes
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      - name: Make a test change and push
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
+
           echo "Update $(date)" > test.txt
           git add test.txt
           git commit -m "Update test file from workflow" || echo "No changes to commit"
-          git push https://x-access-token:${GH_TOKEN}@github.com/aircunza/github-readme-stats.git HEAD:main
+
+          echo "Setting remote with PAT token"
+          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/aircunza/github-readme-stats.git
+
+          echo "Current remotes:"
+          git remote -v
+
+          git push origin main
