--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,36 +1,29 @@
-name: Test Push with PAT
-
+name: test-push
 on:
-  workflow_dispatch:
+  push:
+    branches: [main]
 
 jobs:
-  test-push:
+  push-test:
     runs-on: ubuntu-latest
     env:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Show GH_TOKEN length
-        run: echo "GH_TOKEN length is ${#GH_TOKEN}"
+      - name: Modify test file
+        run: echo "updated on $(date)" > test.txt
 
-      - name: Test GitHub API with PAT
-        run: "curl -H \"Authorization: token $GH_TOKEN\" https://api.github.com/user"
-        
-      - name: Make a test change and push
+      - name: Git config
         run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
+          git config user.name "aircunza"
+          git config user.email "your_email@example.com"
 
-          echo "Update $(date)" > test.txt
+      - name: Set up PAT authentication
+        run: git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
+
+      - name: Commit and push
+        run: |
           git add test.txt
-          git commit -m "Update test file from workflow" || echo "No changes to commit"
-
-          echo "Setting remote with PAT token"
-          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/aircunza/github-readme-stats.git
-
-          echo "Current remotes:"
-          git remote -v
-
-          git push origin main
+          git commit -m "Update test.txt from workflow" || echo "Nothing to commit"
+          git push origin HEAD:main
