--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,13 +1,14 @@
 name: test-push
+
 on:
-  push:
-    branches: [main]
+  workflow_dispatch:
 
 jobs:
   push-test:
     runs-on: ubuntu-latest
     env:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
+
     steps:
       - uses: actions/checkout@v3
 
