--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,32 +1,35 @@
-name: push-test
+name: Update GitHub Stats
 
 on:
   workflow_dispatch:
 
 jobs:
-  push:
+  update-readme:
     runs-on: ubuntu-latest
-    env:
-      GH_TOKEN: ${{ secrets.GH_TOKEN }}
-
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
         with:
-          persist-credentials: false  # 👈 esto es clave
+          persist-credentials: false
 
-      - name: Modify file
-        run: echo "updated on $(date)" > test.txt
-
-      - name: Git config
+      - name: Set up Git config
         run: |
           git config user.name "aircunza"
-          git config user.email "your_email@example.com"
+          git config user.email "aircunza@users.noreply.github.com"
 
-      - name: Set remote with PAT
-        run: git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
-
-      - name: Commit and push
+      - name: Generate stats
         run: |
-          git add test.txt
-          git commit -m "Update test.txt from workflow" || echo "Nothing to commit"
-          git push origin HEAD:main
+          echo "## 🔥 Stats updated on $(date)" > STATS.md
+          echo "" >> STATS.md
+          echo "- Total repos: $(curl -s -H "Authorization: token ${GH_TOKEN}" https://api.github.com/users/aircunza | jq '.public_repos')" >> STATS.md
+          echo "- Followers: $(curl -s -H "Authorization: token ${GH_TOKEN}" https://api.github.com/users/aircunza | jq '.followers')" >> STATS.md
+          echo "- Following: $(curl -s -H "Authorization: token ${GH_TOKEN}" https://api.github.com/users/aircunza | jq '.following')" >> STATS.md
+
+      - name: Commit & push if changed
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
+          git add STATS.md
+          git commit -m "📊 Update GitHub stats" || echo "No changes to commit"
+          git push
