--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,35 +1,38 @@
-name: Update GitHub Stats
+name: Generate and Publish Stats SVG
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *'  # Diario a medianoche (opcional)
 
 jobs:
-  update-stats:
+  build:
     runs-on: ubuntu-latest
-    env:
-      GH_TOKEN: ${{ secrets.GH_TOKEN }}
+
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-        with:
-          persist-credentials: false  # clave para usar GH_TOKEN personalizado
+    - uses: actions/checkout@v3
+      with:
+        persist-credentials: false  # Muy importante para usar token custom
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
 
-      - name: Install dependencies
-        run: npm install
+    - name: Install dependencies
+      run: npm install octokit
 
-      - name: Run stats script
-        run: node get-stats.js
+    - name: Generate stats SVG
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      run: node get-stats.js
 
-      - name: Commit & push changes
-        run: |
-          git config user.name "aircunza"
-          git config user.email "aircunza@users.noreply.github.com"
-          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
-          git add stats.html
-          git commit -m "📊 Update GitHub stats" || echo "No changes to commit"
-          git push
+    - name: Commit and push SVG
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git add docs/stats.svg
+        git commit -m "Update stats SVG [skip ci]" || echo "No changes to commit"
+        git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }} HEAD:${{ github.ref }}
