--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,38 +1,46 @@
-name: Generate and Publish Stats SVG
+name: Update Stats SVG
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:   # manual trigger
   schedule:
-    - cron: '0 0 * * *'  # Diario a medianoche (opcional)
+    - cron: '0 0 * * *'  # opcional: corre diario a medianoche UTC
 
 jobs:
-  build:
+  update-stats:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-      with:
-        persist-credentials: false  # Muy importante para usar token custom
+      - name: Checkout repo
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: false  # Muy importante para usar token personalizado
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
 
-    - name: Install dependencies
-      run: npm install octokit
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Generate stats SVG
-      env:
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
-      run: node get-stats.js
+      - name: Run stats script
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: node get-stats.js
 
-    - name: Commit and push SVG
-      env:
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
-      run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
-        git add docs/stats.svg
-        git commit -m "Update stats SVG [skip ci]" || echo "No changes to commit"
-        git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }} HEAD:${{ github.ref }}
+      - name: Commit updated stats SVG
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          git add stats.html  # o stats.svg, lo que generes
+
+          # Solo commitea si hay cambios reales
+          git diff --cached --quiet || git commit -m "Update stats [skip ci]"
+
+      - name: Push changes
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
+          git push origin HEAD:main
