--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,46 +1,36 @@
-name: Update Stats SVG
+name: Generate Stats and Push
 
 on:
-  workflow_dispatch:   # manual trigger
-  schedule:
-    - cron: '0 0 * * *'  # opcional: corre diario a medianoche UTC
+  workflow_dispatch:
 
 jobs:
-  update-stats:
+  generate-and-push:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-        with:
-          persist-credentials: false  # Muy importante para usar token personalizado
+    - uses: actions/checkout@v3
+      with:
+        persist-credentials: false  # importante para controlar el token
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
 
-      - name: Install dependencies
-        run: npm ci
+    - name: Install dependencies
+      run: npm install
 
-      - name: Run stats script
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: node get-stats.js
+    - name: Generate stats HTML
+      run: node get-stats.js
 
-      - name: Commit updated stats SVG
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+    - name: Configure Git
+      run: |
+        git config user.name "github-actions"
+        git config user.email "github-actions@github.com"
 
-          git add stats.html  # o stats.svg, lo que generes
-
-          # Solo commitea si hay cambios reales
-          git diff --cached --quiet || git commit -m "Update stats [skip ci]"
-
-      - name: Push changes
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: |
-          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
-          git push origin HEAD:main
+    - name: Commit and push stats.html
+      run: |
+        git add stats.html
+        git commit -m "Update stats.html from workflow" || echo "No changes to commit"
+        git push origin HEAD:main
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
