--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,35 +1,39 @@
-name: Update GitHub Stats SVG
+name: Generate GitHub Stats Badge
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Corre cada día a medianoche UTC
-  workflow_dispatch:     # Permite correr manualmente
+    - cron: "0 0 * * *" # Corre cada día a medianoche
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+    - name: Checkout repo
+      uses: actions/checkout@v3
+      with:
+        persist-credentials: false  # clave para usar GH_TOKEN personalizado
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
 
-      - name: Install dependencies
-        run: npm install
+    - name: Install dependencies
+      run: npm install
 
-      - name: Generate stats SVG
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: node get-stats.js
+    - name: Generate stats SVG
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      run: npm run generate-stats
 
-      - name: Commit and push SVG
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add stats.svg
-          git commit -m "Update GitHub stats [skip ci]" || echo "No changes to commit"
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Commit and push changes
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git add stats.svg
+        git commit -m "Update GitHub stats [skip ci]" || echo "No changes to commit"
+        git push
