--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github-readme-stats",
-  "version": "1.0.0",Add commentMore actions
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "start": "node get-stats.js"
