--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Generate stats SVG
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
-      run: npm run generate-stats
+      run: npm run start
 
     - name: Commit and push changes
       env:
