--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -28,6 +28,9 @@ jobs:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: npm run start
 
+    - name: List files in root (debug)
+      run: ls -l
+
     - name: Commit and push changes
       env:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
