--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,43 +1,35 @@
-name: Generate GitHub Stats Badge
+name: Update GitHub Stats
 
 on:
-  schedule:
-    - cron: "0 0 * * *"  # Ejecuta todos los días a la medianoche
-  workflow_dispatch:      # Permite ejecución manual desde GitHub UI
+  workflow_dispatch:
 
 jobs:
-  build:
+  update-stats:
     runs-on: ubuntu-latest
-
+    env:
+      GH_TOKEN: ${{ secrets.GH_TOKEN }}
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
-      with:
-        persist-credentials: false  # Necesario para usar GITHUB_TOKEN personalizado
+      - name: Checkout repo
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: false  # clave para usar GH_TOKEN personalizado
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Generate stats SVG
-      env:
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}  # Tu token personal (PAT), no GITHUB_TOKEN
-      run: npm run start
+      - name: Run stats script
+        run: node get-stats.js
 
-    - name: Configure Git
-      run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
-
-    - name: Commit and Push SVG
-      run: |
-        git add stats.svg
-        git commit -m "Update GitHub stats [skip ci]" || echo "No changes to commit"
-        git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-        git push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Commit & push changes
+        run: |
+          git config user.name "aircunza"
+          git config user.email "aircunza@users.noreply.github.com"
+          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
+          git add stats.html
+          git commit -m "📊 Update GitHub stats" || echo "No changes to commit"
+          git push
