--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -32,6 +32,6 @@ jobs:
           git config user.name "aircunza"
           git config user.email "aircunza@users.noreply.github.com"
           git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
-          git add stats.html
+          git add stats.svg
           git commit -m "📊 Update GitHub stats" || echo "No changes to commit"
           git push
